/*
 * $Id: ChangeLog,v 1.2255 2004/02/10 00:36:17 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-10 03:03 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/contrib/libct/pack.c
    ! fixed casting for OpenWatcom compilation

  * xharbour/source/rtl/val.c
    ! fixed small incompatibilities with Clipper

2004-02-09 16:38 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/itemapi.c
    ! Fixed MSVC support in hb_itemStrBuf(). MSVC snprintf() returns -1 for overflow
      instead of needed size.

2004-02-09 22:27 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/vm/itemapi.c
   * removed redundant code for infinit check. For all C compilers
     we are using which support finite() or isinf()/isnan() we should
     define proper HB_FINITE_DBL macro - it will be faster and will
     recognize other "bad" double values. Now MSVC is not supported
     and use old code

2004-02-09 16:12 UTC-0300 Marcelo Lombardo <lombardo@uol.com.br>
  * source/rtl/readline.c
     ! HB_FREADLINE() now returns -1 if EOF is found
     ! fixed hb_fsReadLine() buffer overrun
     ! hb_fsReadLine() now returns a bEOF param

2004-02-09 10:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/itemapi.c
    * Corrected snprintf() support for MSVC

2004-02-09 18:52 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/include/gtinfo.ch
  * xharbour/source/rtl/gtcgi/gtcgi.c
  * xharbour/source/rtl/gtcrs/gtcrs.c
  * xharbour/source/rtl/gtdos/gtdos.c
  * xharbour/source/rtl/gtpca/gtpca.c
  * xharbour/source/rtl/gtsln/gtsln.c
  * xharbour/source/rtl/gtstd/gtstd.c
  * xharbour/source/rtl/gtwin/gtwin.c
  * xharbour/source/rtl/gtwvt/gtwvt.c
  * xharbour/source/rtl/gtxvt/gtxvt.c
  * xharbour/source/rtl/gtxvt/gtxvt.h
   + new GT_INFO params GTI_INPUTFD and GTI_OUTPUTFD

  * xharbour/include/hbapi.h